--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
         <ul>
             <li>Web Development</li>
             <li>Robotics</li>
+	    <li>UI/UX Design</li>
         </ul>
         <br>
         <h2 class="heading">Languages</h2>
@@ -297,7 +298,7 @@
     <div id="contact">
         
         <h2>Get in Touch</h2>
-        <img src="./images/ammar.jpeg" alt="Me" class="rounded" style="margin-bottom: 10px; border-radius: 80%;" width="100" height="100" >
+         <!--<img src="./images/ammar.jpeg" alt="Me" class="rounded" style="margin-bottom: 10px; border-radius: 80%;" width="100" height="100" >-->
         <br>
         <div id="contact-form">
             <form method="POST" action="https://getform.io/f/73ebbb0e-851d-4921-ae48-e8f5b4b64f56">
