--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
             <li>
                 <a href="#skills">Skills</a>
             </li>
+		<li>
+                <a href="#certificate">Certificationst</a>
+            </li>
             <li>
                 <a href="#contact">Contact</a>
             </li>
+		
         </ul>
     </header>
     <!-- End header -->
@@ -261,7 +265,7 @@
         </ul>
     </div>
     <!-- End #skills -->
-    <div class="optional-section background-alt">
+    <div class="optional-section background-alt" id="certificate">
         <h2 class="heading">Certifications</h2>
     
         <div class="optional-section-block">
