--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#skills">Skills</a>
             </li>
 		<li>
-                <a href="#certificate">Certificationst</a>
+                <a href="#certificate">Certifications</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
