--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="lead-content">
             <h1>Ammar Khurshid</h1>
             <h2>Frontend Web Developer | MERN Stack</h2>
-            <a href="./static/Ammar Resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="./static/Resume-Ammar-Khurshid.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -234,7 +234,7 @@
         <ul>
             <li>Web Development</li>
             <li>Robotics</li>
-	    <li>UI/UX Design</li>
+	        <li>UI/UX Design</li>
         </ul>
         <br>
         <h2 class="heading">Languages</h2>
@@ -252,7 +252,7 @@
         <ul>
             <li>MongoDB</li>
             <li>Express</li>
-            <li>ReactJs</li>
+            <li>React</li>
             <li>Node.js</li>
             <li>ElectronJs</li>
             <li>Robot Operating System</li>
@@ -291,6 +291,9 @@
                 </li>
                 <li>
                     Build an E-commerce Dashboard with Figma on Coursera
+                </li>
+                <li>
+                    Server-side Development with NodeJS, Express and MongoDB on Coursera
                 </li>
             </ul>
         </div>
