--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <p>
                             A React application that tells the current weather conditions of any city in the world using  OpenWeather API. Bootstrap and ParticleJs used for front-end. 
                         </p>
-                        <a href="https://github.com/zorgonide/Weather-App">View Project</a>
+                        <a href="https://zorgonide.github.io/Weather-App/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
