--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="lead-content">
             <h1>Ammar Khurshid</h1>
             <h2>Frontend Web Developer | MERN Stack</h2>
-            <a href="./static/Resume-Ammar-Khurshid.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="./static/Ammar_Khurshid_Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -87,10 +87,9 @@
                         Hi, I'm <b>Ammar</b><br>
                         I'm a 4<sup>th</sup> year undergraduate at <a href="https://manipal.edu/">Manipal Institute of Technology</a>.
                         <br>
-                        A MERN stack web developer by profession with a proficiency in frontend technologies like ReactJs.
+                        A MERN stack web developer by profession with a proficiency in ReactJs.
                         <br/> 
                         Hit me up for anything and everything tech related, or if you want to see me talk about why Samwise Gamgee is the real hero, not Frodo Baggins.
-
                     </p>
                 </div>
             </div>
@@ -105,7 +104,9 @@
                 <h3><a style="text-decoration: none; color: black;" href="https://vigastudios.com/">Viga Studios</a></h3>
                 <h4>Frontend Developer, Intern</h4>
                 <p>
-                    Developed a Single-Sign-On (SSO) interface for different services offered by the studio using ReactJs, to interact with a Django server using REST API endpoints. Facilitates user authentication and registry, and serves as a dashboard for users, with the ability to subscribe to different services. And look good while doing so.
+                    Development of a single sign-in interface to act as a dashboard for all of the movie studio’s applications. Later, I worked on the development of an interface for tracking all the stages involved in a real-time movie development scenario.
+                    I was also responsible for UI/UX design.<br/>
+                    Tech Stack - React, Node, Bootstrap, Javascript.
                 </p>
             </div>
 
@@ -113,7 +114,8 @@
                 <h3>EasyRath</h3>
                 <h4>Web Developer, Intern</h4>
                 <p>
-                    Developed a web application to use as an inventory tool for a B2B business. Worked with  HTML, CSS, Javascript, Bootstrap for front-end design and SQL for the back-end. Used ElectronJs to package the web app as a .exe file for offline use at client side.
+                    A startup where I worked on the development of a web application for use as an inventory management tool for a B2B client.<br/>
+                    Tech stack - HTML, CSS, Javascript, Bootstrap, SQL, ElectronJs
                 </p>
             </div>
 
@@ -194,6 +196,20 @@
                     <!-- End .project-info -->
                 </div>
                 <div class="project shadow-large">
+                    <div class="project-image" style="padding-left: 15vh">
+                        <img src="images/react native confusion.jpeg" height="180px" width="110px"/>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Restaurant application using React Native</h3>
+                        <p>
+                            Rebuilt the earlier website using React Native Framework as a cross-platform mobile application, utilising expo for building and hosting, and Redux for managing application state. REST API endpoints were defined using json-server node module to serve information to the front-end.
+                        </p>
+                        <a href="https://github.com/zorgonide/Confusion-React-Native">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/weatherapp.jpeg" height="180px" width="300px"/>
 
@@ -250,9 +266,11 @@
 
         <h2 class="heading">Technologies</h2>
         <ul>
+            <li>React</li>
+            <li>React Native</li>
+            <li>GatsbyJs</li>
             <li>MongoDB</li>
             <li>Express</li>
-            <li>React</li>
             <li>Node.js</li>
             <li>ElectronJs</li>
             <li>Robot Operating System</li>
@@ -272,13 +290,10 @@
             <!-- <h3>Some content title</h3> -->
             <ul>
                 <li>
+                    Full-Stack Web Development with React Specialization
+                </li>
+                <li>
                     Introduction to User Experience Design on Coursera
-                </li>
-                <li>
-                    Front-End Web Development with React on Coursera
-                </li>
-                <li>
-                    Front-End Web UI Frameworks and Tools: Bootstrap 4 on Coursera.
                 </li>
                 <li>
                     Introduction to Self-Driving Cars by University of Toronto on Coursera. 
@@ -295,10 +310,12 @@
                 <li>
                     Server-side Development with NodeJS, Express and MongoDB on Coursera
                 </li>
+                <li>
+                    Creating a Personal Site with Gatsby
+                </li>
             </ul>
         </div>
         <!-- End .optional-section-block -->
-    
     </div>
     <!-- End .optional-section -->
 
