--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="July 2020 – Present">
+            <div data-date="July 2020 – December 2020">
                 <h3><a style="text-decoration: none; color: black;" href="https://vigastudios.com/">Viga Studios</a></h3>
                 <h4>Frontend Developer, Intern</h4>
                 <p>
