--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+            <div data-date="February 2020 – Present">
+                <h3><a style="text-decoration: none; color: black;" href="https://vigastudios.com/">ICICI Lombard</a></h3>
+                <h4>Consultant, Intern</h4>
+                <p>
+                    Tech intern.
+                </p>
+            </div>
             <div data-date="July 2020 – December 2020">
                 <h3><a style="text-decoration: none; color: black;" href="https://vigastudios.com/">Viga Studios</a></h3>
                 <h4>Frontend Developer, Intern</h4>
@@ -166,15 +173,15 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/confusion.png" height="180px" width="300px"/>
+                        <img src="images/chatter.png" height="180px" width="300px"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info" >
-                        <h3>Restaurant website using Bootstrap</h3>
+                        <h3>Chat application using React and Loopback</h3>
                         <p>
-                            Built a website using a mobile-first approach, with the aid of Bootstrap 4 for a sample restaurant. 
+                            This is a chat application that works on localhost, where a user can sign up/ log in and chat with another user. It uses web sockets to establish and maintain connections between users. Uses redux to manage application state.
                         </p>
-                        <a href="https://github.com/zorgonide/Bootstrap-Practice">View Project</a>
+                        <a href="https://github.com/zorgonide/Chatter">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
