--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <div class="project-info" >
                         <h3>Chat application using React and Loopback</h3>
                         <p>
-                            This is a chat application that works on localhost, where a user can sign up/ log in and chat with another user. It uses web sockets to establish and maintain connections between users. Uses redux to manage application state.
+                            This is a chat application that works on localhost, where a user can sign up/ log in and chat with another user. It uses web sockets to establish and maintain connections between users, and uses redux to manage application state.
                         </p>
                         <a href="https://github.com/zorgonide/Chatter">View Project</a>
                     </div>
