--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="lead-content">
             <h1>Ammar Khurshid</h1>
             <h2>Frontend Web Developer | MERN Stack</h2>
-            <a href="./static/Ammar_Khurshid_Resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="./static/Ammar's Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
