--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h3><a style="text-decoration: none; color: black;" href="https://vigastudios.com/">ICICI Lombard</a></h3>
                 <h4>Consultant, Intern</h4>
                 <p>
-                    Tech intern.
+                    Angular developer.
                 </p>
             </div>
             <div data-date="July 2020 – December 2020">
